fixed scrollbar color in ff

--- a/store/assets/css/main.css
+++ b/store/assets/css/main.css
@@ -117,7 +117,6 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
